# ReadyToDeployApp

./: .env.example  .gitignore  Makefile  README.md  TODO.md  app.py  chunks.json  config.yaml  docker-compose.yaml  main.py  pyproject.toml  seed_ctf.py  seed_demo.py  supervisor_agent.py
.docker/: ollama.entrypoint.sh
app/: application.py  containers.py  prompts.py  utils.py
app/controllers/: __init__.py  auth.py  course.py  knowledge.py
app/gateways/: __init__.py  neo4j.py
app/models/: __init__.py  chat.py  knowledge.py  student.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  common.py  course.py  file.py  knowledge.py  student.py  user.py
app/services/: __init__.py  auth.py  chat.py  dashboard.py  file.py  knowledge.py  student.py  supervisor_agent.py  user.py
app/templates/prompts/: knowledge_system_prompt.j2  knowledge_user_prompt.j2
app/templates/web/: base.html  base_app.html  graph.html  login.html  upload.html
app/templates/web/auth/: login.html  register.html
app/templates/web/course/: _struggle_detail.html  approved_hints.html  chat.html  chat_message.html  dashboard.html  dashboard_progress.html  hint_badge.html  hint_item.html  settings.html
app/templates/web/knowledge/: graph.html  upload.html  upload_list.html
app/views/: auth.py  course.py  guards.py  knowledge.py
scripts/: clear_trajectories.py  drop_trajectory_indexes.py  tag_chunks_with_node_id.py
templates/: dashboard.html
tests/: conftest.py
tests/factories/: __init__.py  knowledge.py
tests/fixtures/: user.py
tests/mocks/: auth_service_mock.py  chat_service_mock.py  embedder_mock.py  graphrag_mock.py  knowledge_service_mock.py  neo4j_session_mock.py  supervisor_agent_service_mock.py  user_service_mock.py
tests/unit/controllers/: test_auth.py  test_course.py  test_knowledge.py
tests/unit/gateways/: test_neo4j.py
tests/unit/models/: test_content_chunk.py  test_knowledge.py  test_user.py
tests/unit/services/: test_auth.py  test_chat.py  test_dashboard.py  test_file.py  test_file_chunking.py  test_knowledge.py  test_knowledge_chunks.py  test_knowledge_mutations.py  test_supervisor_agent.py  test_supervisor_agent_fallback.py  test_supervisor_agent_intent.py  test_supervisor_agent_rerank.py  test_user.py
tests/unit/views/: conftest.py  test_course.py
