[project]
name = "knowledgegraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "dependency-injector>=4.48.3",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-pydantic>=0.14.0",
    "neo4j>=6.1.0",
    "neo4j-graphrag>=1.13.1",
    "opencv-python>=4.13.0.92",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "polyfactory>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.68.0",
    "pymupdf>=1.27.2",
    "pytesseract>=0.3.13",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "uuid-utils>=0.14.1",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "debugpy>=1.8.20",
    "ruff>=0.15.6",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "pytest-cov>=7.0.0",
]

logfire = ["logfire>=4.25.0"]

[tool.coverage.run]
source = ["app", "main", "seed_demo"]
omit = ["tests/*"]
